[package]
name = "muskp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
dialoguer = {version = "0.11.0", features = ["fuzzy-select"]}
glob = "0.3.1"
rand = "0.8.5"
rodio = {version = "0.18.1", features = ["minimp3"], default-features = false}
